[gd_scene load_steps=11 format=3 uid="uid://c8hakvjcb3x6q"]

[ext_resource type="Script" uid="uid://bvf620k3ofjhm" path="res://Source/Scripts/android_gps_wrapper.gd" id="1_ep1f6"]
[ext_resource type="Texture2D" uid="uid://cebvy4jjded4w" path="res://Assets/icon.svg" id="1_gru2d"]
[ext_resource type="Script" uid="uid://cqbsgavm1fwag" path="res://Source/Scripts/main.gd" id="1_rxwwu"]
[ext_resource type="Script" uid="uid://dp3p1ii8i1exo" path="res://Source/Player/player.gd" id="2_hdpnb"]
[ext_resource type="Script" uid="uid://dvud6br2lrxb1" path="res://Source/Scripts/server_api.gd" id="2_rxwwu"]
[ext_resource type="Script" uid="uid://bkvd7myuqs3rf" path="res://Source/Player/player_hud.gd" id="3_5nn6f"]
[ext_resource type="Script" uid="uid://c72t5bk516ojj" path="res://Source/Scripts/map_renderer.gd" id="4_rxwwu"]
[ext_resource type="Script" uid="uid://s3ub8fflb3xj" path="res://Source/Scripts/websocket.gd" id="8_3brre"]
[ext_resource type="Script" uid="uid://cy540lohgtnqy" path="res://Source/Scripts/pause_menu.gd" id="9_tiy2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tiy2u"]
bg_color = Color(0.23392546, 0.23392549, 0.23392531, 1)
expand_margin_left = 15.0
expand_margin_top = 25.0
expand_margin_right = 15.0
expand_margin_bottom = 25.0

[node name="World" type="Node2D" node_paths=PackedStringArray("map_renderer", "android_gps", "server_api", "player")]
script = ExtResource("1_rxwwu")
map_renderer = NodePath("MapRenderer")
android_gps = NodePath("AndroidGPS")
server_api = NodePath("ServerAPI")
player = NodePath("Player")

[node name="ServerAPI" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_rxwwu")
metadata/_custom_type_script = "uid://dvud6br2lrxb1"

[node name="AndroidGPS" type="Node" parent="."]
script = ExtResource("1_ep1f6")
metadata/_custom_type_script = "uid://bvf620k3ofjhm"

[node name="MapRenderer" type="Node2D" parent="." node_paths=PackedStringArray("game", "server_api")]
script = ExtResource("4_rxwwu")
game = NodePath("..")
server_api = NodePath("../ServerAPI")
texture_test = ExtResource("1_gru2d")
metadata/_custom_type_script = "uid://c72t5bk516ojj"

[node name="Player" type="Node2D" parent="." node_paths=PackedStringArray("game")]
z_index = 1
position = Vector2(272, 600)
script = ExtResource("2_hdpnb")
game = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_gru2d")

[node name="DebugGPSCoords" type="Label" parent="Player"]
offset_left = -232.0
offset_top = -144.0
offset_right = 232.0
offset_bottom = -32.0
theme_override_font_sizes/font_size = 12
text = "Latitude: 
Longitude: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugTileCoords" type="Label" parent="Player"]
offset_left = -208.0
offset_top = 32.0
offset_right = 208.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 12
text = "Tile X: 
Tile Y: 
Zoom Level: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
ignore_rotation = false

[node name="Dummies" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_5nn6f")
metadata/_edit_lock_ = true

[node name="FPS" type="Label" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
offset_left = 24.0
offset_top = 32.0
offset_right = 152.0
offset_bottom = 88.0
text = "FPS: "

[node name="GPSCoords" type="Label" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
offset_right = 544.0
offset_bottom = 312.0
metadata/_edit_use_anchors_ = true

[node name="ZoomIn" type="Button" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -88.0
offset_right = 216.0
offset_bottom = -24.0
grow_vertical = 0
text = "Zoom In"

[node name="ZoomOut" type="Button" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -88.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Zoom Out"

[node name="PauseButton" type="Button" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_bottom = 42.0
grow_horizontal = 0
text = "Pause"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_tiy2u")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PauseMenu/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tiy2u")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Placeholder1" type="Button" parent="CanvasLayer/PauseMenu/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Placeholder1"

[node name="Placeholder2" type="Button" parent="CanvasLayer/PauseMenu/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Placeholder2"

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="WebSocket" type="Node" parent="."]
script = ExtResource("8_3brre")
